--- a/index.html
+++ b/index.html
@@ -158,8 +158,13 @@
         	<div class="record-view__panel-title">Add to home</div>
 		<div class="record-view__panel-mic">
 			<img src="/pwa-sample/favicon.ico" alt="Home" style="height: 50px;margin-left: 41%;">
+			<div id='installer'>
+			      <button class='button'>Install</button>
+			      <span class='tooltip'></span>
+			    </div>
+			<button tabindex="-1" class="record-view__record-cancel-btn js-record-cancel-btn">Cancel</button>
 		</div>
-        	<button tabindex="-1" class="record-view__record-cancel-btn js-record-cancel-btn">Cancel</button>
+        	
 	</div>
 </section>
 <!-- movie details -->
