--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PWA</title>
   <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon-precomposed" href="images/ziggo_logo.png" />
+  <link rel="icon" href="images/ziggo_logo.png" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="PWA">
