--- a/table.html
+++ b/table.html
@@ -6,10 +6,10 @@
 <html>
 <head>
     <title>Bootstrap Table Examples</title>
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cerulean/bootstrap.min.css">
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css">
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.js"></script>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cerulean/bootstrap.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.js"></script>
 </head>
 <body>
 <table data-toggle="table" data-url="./data2.json">
@@ -23,8 +23,7 @@
     <tbody>
         <tr><td>Pear  </td><td data-month="1">January</td> <td>Fruit</td></tr>
         <tr><td>Carrot</td><td data-month="3">March</td>   <td>Vegetable</td></tr>
-        <tr>
-
+    </tbody>
 </body>
 </html>
 <script type="text/javascript">
