--- a/table.html
+++ b/table.html
@@ -15,9 +15,9 @@
 <table data-toggle="table" data-url="./data.json">
     <thead>
         <tr>
-            <th data-field="fruit" data-sortable="true">Item</th>
-            <th data-field="date"  data-sortable="true">Date</th>
-            <th data-field="type"  data-sortable="true">Type</th>
+            <th data-field="id" data-sortable="true">Item</th>
+            <th data-field="name"  data-sortable="true">Date</th>
+            <th data-field="price"  data-sortable="true">Type</th>
         </tr>
     </thead>
     <tbody>
