--- a/table.html
+++ b/table.html
@@ -20,10 +20,7 @@
             <th data-field="price"  data-sortable="true">Type</th>
         </tr>
     </thead>
-    <tbody>
-        <tr><td>Pear  </td><td data-month="1">January</td> <td>Fruit</td></tr>
-        <tr><td>Carrot</td><td data-month="3">March</td>   <td>Vegetable</td></tr>
-    </tbody>
+	</table>
 </body>
 </html>
 <script type="text/javascript">
