--- a/table.html
+++ b/table.html
@@ -15,9 +15,9 @@
 <table data-toggle="table" data-url="./data.json">
     <thead>
         <tr>
-            <th data-field="id" data-sortable="true">Item</th>
-            <th data-field="name"  data-sortable="true">Date</th>
-            <th data-field="price"  data-sortable="true">Type</th>
+            <th data-field="employee_id" data-sortable="true">EmpId</th>
+            <th data-field="first_name"  data-sortable="true">First Name</th>
+            <th data-field="last_name"  data-sortable="true">Last Name</th>
         </tr>
     </thead>
 	</table>
