--- a/table.html
+++ b/table.html
@@ -12,7 +12,7 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.js"></script>
 </head>
 <body>
-<table data-toggle="table" data-url="./data.json">
+<table data-toggle="table" data-search="true" data-url="./data.json">
     <thead>
         <tr>
             <th data-field="employee_id" data-sortable="true">EmpId</th>
