--- a/table.html
+++ b/table.html
@@ -14,7 +14,6 @@
 <body>
 <table data-toggle="table" 
        data-search="true"
-       data-show-pagination-switch="true"
        data-pagination="true"
        data-page-list="[10, 25, 50, 100, ALL]"
        data-url="./data.json">
@@ -29,5 +28,11 @@
 </body>
 </html>
 <script type="text/javascript">
-	
+	var $table = $('table');
+	$(function () {
+		$table.on('click-row.bs.table', function (e, row, $element) {
+			$('.success').removeClass('success');
+			$($element).addClass('success');
+		});
+	});
 </script>
