--- a/table.html
+++ b/table.html
@@ -15,7 +15,12 @@
 <table data-toggle="table" 
        data-search="true"
        data-pagination="true"
+       data-page-size="5"
        data-page-list="[5, 10, 20, 30, ALL]"
+       data-pagination-first-text="First"
+       data-pagination-pre-text="Previous"
+       data-pagination-next-text="Next"
+       data-pagination-last-text="Last"
        data-url="./data.json">
     <thead>
         <tr>
