--- a/table.html
+++ b/table.html
@@ -16,7 +16,7 @@
        data-search="true"
        data-pagination="true"
        data-page-size="5"
-       data-page-list="[5, 10, 20, 30, ALL]"
+       data-page-list="[5, 10, 20, 30]"
        data-pagination-first-text="First"
        data-pagination-pre-text="Previous"
        data-pagination-next-text="Next"
