--- a/table.html
+++ b/table.html
@@ -12,11 +12,13 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.js"></script>
 </head>
 <body>
+<div id="toolbar">
+    <button id="button" class="btn btn-default">remove</button>
+</div>
 <table data-toggle="table" 
        data-search="true"
        data-pagination="true"
        data-page-size="5"
-       data-page-list="[5, 10, 20, 30]"
        data-pagination-first-text="First"
        data-pagination-pre-text="Previous"
        data-pagination-next-text="Next"
