--- a/table.html
+++ b/table.html
@@ -14,9 +14,6 @@
 <body>
 <div id="toolbar" class="btn-group">
     <button type="button" class="btn btn-default">
-        <i class="glyphicon glyphicon-plus"></i>
-    </button>
-    <button type="button" class="btn btn-default">
         <i class="glyphicon glyphicon-pencil"></i>
     </button>
     <button type="button" class="btn btn-default">
@@ -32,6 +29,7 @@
        data-pagination-next-text="Next"
        data-pagination-last-text="Last"
        data-show-columns="true"
+       data-toolbar="#toolbar"
        data-url="./data.json">
     <thead>
         <tr>
