--- a/table.html
+++ b/table.html
@@ -36,6 +36,8 @@
             <th data-field="employee_id" data-sortable="true">EmpId</th>
             <th data-field="first_name"  data-sortable="true">First Name</th>
             <th data-field="last_name"  data-sortable="true">Last Name</th>
+	    <th data-field="phone"  data-sortable="true">Phone</th>
+	    <th data-field="email"  data-sortable="true">Email</th>
         </tr>
     </thead>
 	</table>
